# pelican2

./: .gitignore  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  config.hpp  container.hpp  handle.hpp  job_system.cpp  job_system.hpp  log.cpp  log.hpp  pelican_core.cpp  pelican_core.hpp  profiler.cpp  profiler.hpp  resourcecontainer.hpp
src/core/appflow/: CMakeLists.txt  framerate.cpp  framerate.hpp  loop.cpp  loop.hpp
src/core/asset/: CMakeLists.txt  model.cpp  model.hpp
src/core/ecs/: CMakeLists.txt  benchmark.cpp  chunk.cpp  chunk.hpp  component.hpp  component_meta.cpp  component_meta.hpp  componentinfo.cpp  componentinfo.hpp  core.cpp  core.hpp  entity.hpp  predefined.cpp  predefined.hpp
src/core/ecs/predefined/: CMakeLists.txt  camera.hpp  camerasystem.cpp  camerasystem.hpp  collision.cpp  collision.hpp  localtransformsystem.cpp  localtransformsystem.hpp  modelview.cpp  modelview.hpp  modelviewtransformsystem.cpp  modelviewtransoformsystem.hpp  modelviewupdatesystem.cpp  modelviewupdatesystem.hpp  transform.hpp
src/core/fullscreenpass/: CMakeLists.txt  fullscreenpasscontainer.cpp  fullscreenpasscontainer.hpp
src/core/geomhelper/: geomhelper.hpp
src/core/light/: CMakeLists.txt  light.hpp  lightcontainer.cpp  lightcontainer.hpp
src/core/loader/: CMakeLists.txt  basicconfig.cpp  basicconfig.hpp  component.cpp  component.hpp  projectsrc.cpp  projectsrc.hpp  scene.cpp  scene.hpp
src/core/material/: CMakeLists.txt  material.hpp  materialcontainer.cpp  materialcontainer.hpp  materialrender.cpp  materialrender.hpp  standardmaterialresource.cpp  standardmaterialresource.hpp
src/core/model/: CMakeLists.txt  gltf.cpp  gltf.hpp  instance.hpp  modeltemplate.hpp  modeltemplatecontainer.cpp  modeltemplatecontainer.hpp  polygoninstancecontainer.cpp  polygoninstancecontainer.hpp  primitivebufcontainer.cpp  primitivebufcontainer.hpp  vertbufcontainer.cpp  vertbufcontainer.hpp
src/core/os/: CMakeLists.txt  window.cpp  window.hpp
src/core/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  fullscreenpassrenderer.cpp  fullscreenpassrenderer.hpp  materialrender.cpp  materialrender.hpp  modelinstance.hpp  polygoninstancecontainer.cpp  polygoninstancecontainer.hpp  uicontainer.cpp  uicontainer.hpp  uirenderer.cpp  uirenderer.hpp
src/core/renderingpass/: CMakeLists.txt  renderingpass.hpp  renderingpasscontainer.cpp  renderingpasscontainer.hpp  rendertargetcontainer.cpp  rendertargetcontainer.hpp
src/core/resources/: CMakeLists.txt  bloom_blur_h.frag  bloom_blur_v.frag  bloom_composite.frag  bloom_highpass.frag  debug_texture.frag  default.frag  default.vert  default_config.json  example_scene_data.json  fullscreen.frag  fullscreen.vert  ssao.frag  ssao_blur.frag  test_simple.vert  ui.frag  ui.vert
src/core/shader/: CMakeLists.txt  shader.hpp  shadercontainer.cpp  shadercontainer.hpp
src/core/userpublic/: CMakeLists.txt  abstractscreen.hpp  gameobjects.cpp  gameobjects.hpp  pelican_core.cpp  pelican_core.hpp  userinput.cpp  userinput.hpp
src/core/userpublic/components/: CMakeLists.txt  collider.cpp  collider.hpp  localtransform.hpp  modelview.hpp  predefined.hpp
src/core/userpublic/details/component/: CMakeLists.txt  registerer.cpp  registerer.hpp
src/core/userpublic/details/ecs/: CMakeLists.txt  chunk.cpp  chunk.hpp  component.hpp  componentdeclare.hpp  coredist.cpp  coredist.hpp  coretemplate.cpp  coretemplate.hpp
src/core/userpublic/geom/: quat.hpp  vec.hpp
src/core/userpublic/serialize/: CMakeLists.txt  binaryarchive.hpp  jsonarchive.cpp  jsonarchive.hpp  serialize.hpp
src/core/vkcore/: CMakeLists.txt  buf.hpp  cmdbuf.cpp  cmdbuf.hpp  core.cpp  core.hpp  image.hpp  renderer.cpp  renderer.hpp  rendertarget.cpp  rendertarget.hpp  util.cpp  util.hpp  vma_impl.cpp
src/devcli/: CMakeLists.txt  main.cpp
src/devcli/resources/: CMakeLists.txt  CMakeLists.txt.template  system.cpp.template
src/devstudio/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/devstudio/model/: CMakeLists.txt  project.hpp
src/devstudio/resources/: CMakeLists.txt  CMakeLists.txt.template  component.cpp.template  main.cpp.template
src/devstudio/view/: CMakeLists.txt  MainWindow.qml  ProjectEdit.qml  mainwindow.cpp  mainwindow.hpp  pelicancoreglue.cpp  pelicancoreglue.hpp  playerscreen.cpp  playerscreen.hpp  ui_depended_setup.cmake  uimain.cpp  uimain.hpp
src/devstudio/view/viewmodel/: CMakeLists.txt  testbackend.cpp  testbackend.hpp
src/player/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  hoge_test.cpp
